--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
 </head>
 
@@ -17,51 +19,131 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"
         integrity="sha512-kp7YHLxuJDJcOzStgd6vtpxr4ZU9kjn77e6dBsivSz+pUuAuMlE2UTdKB7jjsWT84qbS8kdCWHPETnP/ctrFsA=="
         crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+
     <script type="text/babel">
-        let products = {
-            title: "List of Products",
-            items: ["item1", "item2", "item3", "item4", "item5"]
-        }
+        let contacts = [
+            {
+                id: 1,
+                name: 'Darth Vader',
+                phoneNumber: '+250966666666',
+                image: 'http://cs7.pikabu.ru/images/big_size_comm_an/2014-03_7/13962622876915.gif',
+                email: 'darth_vader@gmail.com',
+                address: 'Starkiller'
+            }, {
+                id: 2,
+                name: 'Princess Leia',
+                phoneNumber: '+250966344466',
+                image: 'http://images6.fanpop.com/image/photos/33100000/CARRIE-FISHER-anakin-vader-and-princess-leia-33186069-190-149.gif',
+                email: 'princess_leia@gmail.com',
+                address: 'Endor'
+            }, {
+                id: 3,
+                name: 'Luke Skywalker',
+                phoneNumber: '+250976654433',
+                image: 'https://media4.giphy.com/media/3ornk6UHtk276vLtkY/giphy.gif',
+                email: 'luke_sky@gmail.com',
+                address: 'Tatooine'
+            }, {
+                id: 4,
+                name: 'Chewbacca',
+                phoneNumber: '+250456784935',
+                image: 'https://media.giphy.com/media/RUUdVZqwpfTRS/giphy.gif',
+                email: 'chewbacca@gmail.com',
+                address: 'Hoth'
+            }
+        ];
 
         class Item extends React.Component {
+            constructor(props) {
+                super(props);
+                this.state = { show: false, display: "none", btn: "More"}
+                this.showDetails = this.showDetails.bind(this)
+            }
+            showDetails(e) {
+                this.setState({ show: !this.state.show })
+
+                if (this.state.display == "none") {
+                    this.setState({ display: "block" })
+                } else {
+                    this.setState({ display: "none" })
+                }
+
+                if (this.state.btn == "More") {
+                    this.setState({ btn: "Less" })
+                } else {
+                    this.setState({ btn: "More" })
+                }
+            }
+
             render() {
-                return <li>{this.props.name}</li>
+                return <div className="card my-2 shadow-sm">
+                    <div className="card-body">
+                        <div className="row">
+                            <div className="col-auto">
+                                <img src={this.props.contact.image} className="rounded-circle" alt="Cinque Terre" width="100px" height="100px" />
+                            </div>
+                            <div className="col">
+                                <h5 className="card-title">{this.props.contact.name}</h5>
+                                <h6 className="card-subtitle mb-2 text-muted">{this.props.contact.phoneNumber}</h6>
+                            </div>
+                            <div className="col-auto">
+                                <button type="button" className="btn btn-outline-secondary" onClick={this.showDetails}>{this.state.btn}</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div className="card-footer" id={"details" + this.props.contact.id} style={{display: this.state.display}}>
+                        <p><span className="fw-bold">Email:</span> {this.props.contact.email}</p>
+                        <p><span className="fw-bold">Address:</span> {this.props.contact.address}</p>
+                    </div>
+                </div>
             }
         }
         class ListItem extends React.Component {
             constructor(props) {
                 super(props)
                 this.filterItems = this.filterItems.bind(this)
-                this.state = {items: this.props.data.items}
-                this.filterItems = this.filterItems.bind(this)
+                this.state = { items: this.props.data }
+                console.log(this.state.items)
             }
 
             filterItems(e) {
-                let filteredItems = this.props.data.items.filter(function(item){
-                    return item.toLowerCase().search(e.target.value.toLowerCase()) !== -1;
+                let filteredItems = this.props.data.filter(function (item) {
+                    return item.name.toLowerCase().search(e.target.value.toLowerCase()) !== -1;
                 })
-                this.setState({items: filteredItems})
+                this.setState({ items: filteredItems })
             }
 
             render() {
                 return <div>
-                    <h1>{this.props.data.title}</h1>
-                    <input type="text" placeholder="Search item" onChange={this.filterItems}/>
-                    <ul>
+                    <nav className="navbar navbar-dark bg-dark shadow-sm">
+                        <div className="container">
+                            <span className="navbar-brand mb-0 h1">Contact List</span>
+                        </div>
+                    </nav>
+                    <nav className="navbar navbar-light bg-light shadow-sm">
+                        <div className="container">
+                            <input type="text" className="input-group-text" placeholder="Search contacts" onChange={this.filterItems} />
+                            <button type="button" className="btn btn-outline-secondary">Primary</button>
+                        </div>
+                    </nav>
+                    <div className="container pt-3">
                         {
-                            this.state.items.map(function(item) {
-                                return <Item name={item} key={item}/>
+                            this.state.items.map(function (item) {
+                                return <Item contact={item} key={item.id} />
                             })
                         }
-                    </ul>
+                    </div>
+
                 </div>
             }
         }
 
         ReactDOM.render(
             <div>
-                <ListItem data={products} />
+                <ListItem data={contacts} />
             </div>,
             document.getElementById("app")
         )
