--- a/i.html
+++ b/i.html
@@ -19,7 +19,15 @@
     </nav>
     <nav class="navbar navbar-dark bg-secondary shadow">
         <div class="container">
-            <input type="text" class="input-group-text" placeholder="Search" onChange={this.filterItems} />
+            <!-- <input type="text" class="input-group-text" placeholder="Search" onChange={this.filterItems} /> -->
+            <div class="input-group">
+                <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown</button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="#">Name</a></li>
+                    <li><a class="dropdown-item" href="#">Phone</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="container">
@@ -43,6 +51,9 @@
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
